--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
+title: Qichen's Homepage
+page-top-title: Qichen
 top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+home-subtitle: Qichen&enfj;|&enfj;
+copyright-text: '&copy; Qichen 2025-2026. All Rights Reserved.'
