--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Qichen's Homepage
 page-top-title: Qichen
 top-section-bg-text: Be what you wanna be
-home-subtitle: Qichen&enfj;|&enfj;
+home-subtitle: Qichen
 copyright-text: '&copy; Qichen 2025-2026. All Rights Reserved.'
